# Question-Answering-RAG

./: .env.example  .gitignore  BENCHMARK_README.md  Dockerfile  Dockerfile.simple  FINAL_EVALUATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  VISUALISASI_RAG_SUMMARY.md  create_specific_charts.py  docker-compose-simple.yml  docker-compose.yml  documents_preview.json  evaluation_dataset_health_law.csv  parser-to-json.py  pyproject.toml  qa-system copy.ipynb  qa-system-improve.ipynb  qa-system-json.ipynb  qa-system.ipynb  quick_visualization.py  requirements.txt  run_benchmark.sh  run_fixed_evaluation.py  run_ragas_benchmark.py  setup.py  view_embedding_results.py  visualize.ipynb
Final/: Dockerfile  README_POSTMAN_TESTING.md  agentic_rag_executor.py  docker-compose.yml  export_pasal_csv.py  export_pasal_tanpa_bab.py  ingest_in_csv_db.py  ingest_in_csv_db_small.py  ingest_in_db.py  multi_api.py  pasal_output.csv  pasal_output_tanpa_bab.csv  quick_test.py  redis_debug.py  requirements.txt  simple_api.py
analysis/: README.md  debug_evaluation.py  evaluate_and_visualize.py
app/: main.py
benchmark_results/: benchmark_data_20250616_131708.csv  benchmark_data_20250616_195319.csv  benchmark_summary_20250616_131708.json  benchmark_summary_20250616_195319.json  complete_benchmark_20250616_131708.json  complete_benchmark_20250616_195319.json  comprehensive_report_20250616_131708.md  comprehensive_report_20250616_195319.md  latex_table_20250616_131708.tex  latex_table_20250616_195319.tex  ragas_evaluation_20250628_222237_complete.json  ragas_evaluation_20250628_224517_complete.json
benchmarks/: TESTING_SUMMARY.md  complete_benchmark.py  discover_endpoints.py  ragas_benchmark.py  ragas_multi_turn_evaluation.py  simple_benchmark.py  simple_embedding_comparison.py  test_endpoints.py  test_endpoints_updated.py
data-json/: Peraturan_Pemerintah_28_2024.json
datasets/: README.md  validasi_ta.csv
docs/: ALL_RETRIEVED_DOCUMENTS_GUIDE.md  API.md  BENCHMARK_README.md  CLEANUP_ORGANIZATION_SUMMARY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  EMBEDDING_COMPARISON_README.md  ENHANCED_CACHE_STOPWORDS.md  FINAL_VISUALIZATION_GUIDE.md  PROJECT_STRUCTURE.md  RAGAS_EVALUATION_GUIDE.md  SETUP_LANGFUSE.md  SIMPLE_RAG_HARD_FILTERING_GUIDE.md
memory/: PDF_index.faiss  PDF_index.pkl
output-fix/: pasal_output_PP-28-2024.csv  pasal_output_UU-40-2004.csv  pasal_output_perpres-100-2021.csv  pasal_output_perpres-101-2021.csv  pasal_output_perpres-110-2022.csv  pasal_output_perpres-161-2024.csv  pasal_output_perpres-48-2023.csv  pasal_output_perpres-72-2021.csv  (+16 more)
(+93 files in other folders)
